Print stacktrace to stdout